--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
 asgiref==3.7.2
+certifi==2023.11.17
+charset-normalizer==3.3.2
 dj-database-url==2.1.0
 Django==5.0
 django-phonenumber-field==7.2.0
 gunicorn==21.2.0
+idna==3.6
 packaging==23.2
 phonenumberslite==8.13.26
 psycopg2-binary==2.9.9
+requests==2.31.0
 sqlparse==0.4.4
+stripe==7.10.0
 typing_extensions==4.9.0
+urllib3==2.1.0
